# systabs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
syscalls/: __main__.py  architectures.py  syscalls.py
syscalls/parser/: parser.py
tables/: SPEC.md  SPEC_ALPHA_64.md  SPEC_ARC_32.md  SPEC_ARC_64.md  SPEC_ARM64_64.md  SPEC_ARM_32.md  SPEC_CSKY_32.md  SPEC_H8300_16.md  SPEC_HEXAGON_32.md  SPEC_IA64_64.md  SPEC_M68K_16.md  SPEC_M68K_32.md  SPEC_MICROBLAZE_32.md  SPEC_MICROBLAZE_64.md  SPEC_MIPS_32.md  SPEC_MIPS_64.md  SPEC_NDS32_32.md  SPEC_NIOS2_32.md  SPEC_OPENRISC_32.md  SPEC_OPENRISC_64.md  SPEC_PARISC_32.md  SPEC_PARISC_64.md  SPEC_POWERPC_32.md  SPEC_POWERPC_64.md  SPEC_RISCV_32.md  SPEC_RISCV_64.md  SPEC_SPARC_32.md  SPEC_SPARC_64.md  SPEC_X86_32.md  SPEC_X86_64.md  SPEC_XTENSA_32.md
